Add Ant Design component framework

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
   "presets": ["latest", "react"],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": ["react-hot-loader/babel",
+    ["import", { "libraryName": "antd", "style": "css" }]]
 }
