--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-import": "^1.1.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
     "react-hot-loader": "^3.0.0-beta.6",
-    "url-loader": "^0.5.7",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "antd": "^2.5.3",
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
